k8s/base/ccore-ai-demo/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo
  namespace: ccore-ai-demo
  annotations:
    traefik.ingress.kubernetes.io/router.tls.certresolver: "letsencrypt"
spec:
  ingressClassName: traefik
  rules:
    - host: demo.ccore.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 8501
